Created rendering of table with users

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<button class="btn"></button>
+	<div id="main-interface"></div>
 <script src="js/all.js"></script>
 </body>
 </html>
