--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<span class="glyphicon glyphicon-ok"></span>
 	<div id="main-interface"></div>
 <script src="js/all.js"></script>
 </body>
